PROD-12-18-19/force-app/main/default/objects/Property_Relation__c/Property_Relation__c.object-meta.xml
<CustomObject>
    <label>Property Relation</label>
    <nameField>
        <label>Property Relation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Property Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>