PROD-12-18-19/force-app/main/default/objects/Property_Relation__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <label>Lease End Date</label>
    <type>Date</type>
</CustomField>