PROD-12-18-19/force-app/main/default/objects/Property_Relation__c/fields/Lease_Type__c.field-meta.xml
<CustomField>
    <fullName>Lease_Type__c</fullName>
    <label>Lease Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Original_Lease</fullName>
                <default>true</default>
                <label>Original Lease</label>
            </value>
            <value>
                <fullName>Contraction</fullName>
            </value>
            <value>
                <fullName>Expansion</fullName>
            </value>
            <value>
                <fullName>HoldOver</fullName>
            </value>
            <value>
                <fullName>Remeasure</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>