PROD-12-18-19/force-app/main/default/objects/Property_Relation__c/fields/Property_Type__c.field-meta.xml
<CustomField>
    <fullName>Property_Type__c</fullName>
    <formula>Property__r.RecordType.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Property Type</label>
    <type>Text</type>
</CustomField>