PROD-12-18-19/force-app/main/default/objects/Property_Relation__c/fields/Retroactive_workflows__c.field-meta.xml
<CustomField>
    <fullName>Retroactive_workflows__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retroactive workflows</label>
    <type>Checkbox</type>
</CustomField>