PROD-12-18-19/force-app/main/default/objects/Property_Relation__c/fields/Update_Property_Name__c.field-meta.xml
<CustomField>
    <fullName>Update_Property_Name__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update Property Name</label>
    <type>Checkbox</type>
</CustomField>