PROD-12-18-19/force-app/main/default/objects/Property_Relation__c/validationRules/End_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date</fullName>
    <active>false</active>
    <errorConditionFormula>End_Date__c &lt; Start_Date__c</errorConditionFormula>
    <errorMessage>Lease End date must be after Lease Start date</errorMessage>
</ValidationRule>